changed theme, added info

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Emily" />
 
-<meta name="date" content="2024-09-12" />
 
-<title>Collab Website</title>
+<title>Emily and Naomi Successfully Made a Website!</title>
 
 <script src="site_libs/header-attrs-2.28/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -341,24 +339,27 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Collab Website</h1>
-<h4 class="author">Emily</h4>
-<h4 class="date">2024-09-12</h4>
+<h1 class="title toc-ignore">Emily and Naomi Successfully Made a
+Website!</h1>
 
 </div>
 
 
-<div id="partners" class="section level2">
-<h2>partners</h2>
+<hr />
+<div id="we-did-it" class="section level1">
+<h1>WE DID IT</h1>
+<p>After force quitting, restarting, and Googling error messages for
+approximately an HOUR, We. Have. Succeeded!</p>
+<p>This page is our success. I hope you enjoy.</p>
+<hr />
+<div id="partners" class="section level3">
+<h3>Partners</h3>
 <p>Emily Hamant: <a href="https://github.com/elhamant"
 class="uri">https://github.com/elhamant</a></p>
 <p>Naomi Murray: <a href="https://github.com/naomiamurray"
 class="uri">https://github.com/naomiamurray</a></p>
-<div class="float">
-<img
-src="https://www.bpmcdn.com/f/files/sooke/import/2017-04/24440sookeGNG-ArbutusfungusPMar2515.jpg;w=725"
-alt="Arbutus Canker" />
-<div class="figcaption">Arbutus Canker</div>
+<p><img
+src="https://t3.ftcdn.net/jpg/04/57/71/58/360_F_457715882_WyNbT7ffNndTgO986fFsukTm3inzPN8O.jpg" /></p>
 </div>
 </div>
 
