--- a/Emily.html
+++ b/Emily.html
@@ -353,9 +353,12 @@ div.tocify {
 </ul>
 <hr />
 <p><br></p>
-<div id="my-cats" class="section level4">
-<h4>My Cats</h4>
+</div>
+<div id="my-cats" class="section level3 tabset">
+<h3 class="tabset">My Cats</h3>
 <p><br></p>
+<div id="sprout" class="section level4">
+<h4>Sprout</h4>
 <div class="float">
 <img src="sprout.jpg"
 width="250" height="300" alt="Sprout" />
@@ -368,6 +371,9 @@ width="500" height="200" alt="Sprout’s Likeness (Common Potoo)" />
 <div class="figcaption">Sprout’s Likeness (Common Potoo)</div>
 </div>
 <p><br></p>
+</div>
+<div id="goose" class="section level4">
+<h4>Goose</h4>
 <div class="float">
 <img src="image000002.jpg"
 width="225" height="350" alt="Goose" />
