--- a/Emily.html
+++ b/Emily.html
@@ -344,8 +344,9 @@ div.tocify {
 </div>
 
 
-<div id="about" class="section level3">
-<h3>About</h3>
+<hr />
+<div id="about" class="section level2 tabset">
+<h2 class="tabset">About</h2>
 <ul>
 <li><p><em>I have two cats, Goose and Sprout</em></p></li>
 <li><p><em>I moved from Yakima, Washington</em></p></li>
@@ -354,8 +355,8 @@ div.tocify {
 <hr />
 <p><br></p>
 </div>
-<div id="my-cats" class="section level3 tabset">
-<h3 class="tabset">My Cats</h3>
+<div id="my-cats" class="section level2">
+<h2>My Cats</h2>
 <p><br></p>
 <div id="sprout" class="section level4">
 <h4>Sprout</h4>
@@ -386,7 +387,23 @@ width="400" height="400"
 alt="Goose’s Likeness (perfect orange angel)" />
 <div class="figcaption">Goose’s Likeness (perfect orange angel)</div>
 </div>
+<hr />
+<p><br></p>
 </div>
+</div>
+<div id="things-i-miss-about-yakima" class="section level2">
+<h2>Things I miss about Yakima</h2>
+<p><font size="4"></p>
+<ul>
+<li>My Friends</li>
+<li>Lack of Humidity</li>
+<li>Climbing outside in the Sun</li>
+<li>Wine</li>
+<li>Single Hill Bingo with Claire</li>
+<li>Seeing Rainier and Adams every day</li>
+<li>Cascade Hikes</li>
+<li>Good Mexican Food </font></li>
+</ul>
 </div>
 
 
