added spaces between bullets in things I miss about yakima

--- a/Emily.html
+++ b/Emily.html
@@ -395,14 +395,14 @@ alt="Goose’s Likeness (perfect orange angel)" />
 <h2>Things I miss about Yakima</h2>
 <p><font size="4"></p>
 <ul>
-<li>My Friends</li>
-<li>Lack of Humidity</li>
-<li>Climbing outside in the Sun</li>
-<li>Wine</li>
-<li>Single Hill Bingo with Claire</li>
-<li>Seeing Rainier and Adams every day</li>
-<li>Cascade Hikes</li>
-<li>Good Mexican Food </font></li>
+<li><p>My Friends</p></li>
+<li><p>Lack of Humidity</p></li>
+<li><p>Climbing outside in the Sun</p></li>
+<li><p>Wine</p></li>
+<li><p>Single Hill Bingo with Claire</p></li>
+<li><p>Seeing Rainier and Adams every day</p></li>
+<li><p>Cascade Hikes</p></li>
+<li><p>Good Mexican Food </font></p></li>
 </ul>
 </div>
 
